--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,32 +1,12 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td><b>Before</b></td> <td><a href="https://forms.gle/TVEyTDjrn8TzLCwD9">Pre-workshop survey</a> </td> <td> </td> </tr>
+      <tr> <td><b>Sept. 15</b></td>  <td><a href="https://carpentries-incubator.github.io/Data-Science-for-Docs/">Data Science for Clinicians and Docs</a></td> <td><a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs">Etherpad</a></td> </tr>
+      <tr> <td><b>Sept. 29</b></td>  <td><a href="https://carpentries-incubator.github.io/docker-introduction/">Intro to Docker</a></td> <td> <a href="https://pad.carpentries.org/2021-09-29-uwmadison-docker">Etherpad</a></td></tr>
+      <tr> <td><b>Oct. 27</b></td>  <td><a href="https://uw-madison-datascience.github.io/git-novice-custom/">Git/GitHub</a> (PREREQ: For this workshop, you need to be familiar with all of the commands taught in this <a href="http://swcarpentry.github.io/shell-novice/">unix shell lesson</a>.)</td> <td> <a href="https://pad.carpentries.org/2020-10-14-uwmadison-git">Etherpad</a></td> </tr>
+      <tr> <td><b>Nov. 10</b></td>  <td><a href="https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">Intro to ML with sklearn</a></td> <td> <a href="https://pad.carpentries.org/2021-11-10-uwmadison-ml">Etherpad</a></td> </tr>
+      <tr> <td><b>Dec. 8</b></td>  <td><a href="">TBA</a></td>
     </table>
   </div>
 </div>
