--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -6,7 +6,7 @@
       <tr> <td><b>Sept. 29</b></td>  <td><a href="https://carpentries-incubator.github.io/docker-introduction/">Intro to Docker</a></td> <td> <a href="https://pad.carpentries.org/2021-09-29-uwmadison-docker">Etherpad</a></td></tr>
       <tr> <td><b>Oct. 27</b></td>  <td><a href="https://uw-madison-datascience.github.io/git-novice-custom/">Git/GitHub</a> (PREREQ: For this workshop, you need to be familiar with all of the commands taught in this <a href="http://swcarpentry.github.io/shell-novice/">unix shell lesson</a>.)</td> <td> <a href="https://pad.carpentries.org/2020-10-14-uwmadison-git">Etherpad</a></td> </tr>
       <tr> <td><b>Nov. 10</b></td>  <td><a href="https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">Intro to ML with sklearn</a></td> <td> <a href="https://pad.carpentries.org/2021-11-10-uwmadison-ml">Etherpad</a></td> </tr>
-      <tr> <td><b>Dec. 8</b></td>  <td><a href="">TBA</a></td>
+      <tr> <td><b>Dec. 8</b></td>  <td><a href="">TBA</a></td></tr>
     </table>
   </div>
 </div>
