--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -27,12 +27,12 @@
   <tr>
     <td class="tg-0pky">Pre-workshop</td>
     <td class="tg-0pky"><span style="font-style:normal"> </span>
-    	<a href="https://uw-madison-datascience.github.io/geospatial-workshop/setup.html">Install software and download data</a><br><span style="font-style:normal"></td>
+    	<a href="https://uw-madison-datascience.github.io/geospatial-workshop/setup.html">Install software and download data</a><br><span style="font-style:normal"></a></td>
     <td class="tg-0pky"></td>
   </tr>
   <tr>
     <td class="tg-0pky">Data Science For Docs and Clinicians (September 15th)</td>
-    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/">lesson link <a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs"</a>(Access to Etherpad)</td>
+    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/">lesson link <a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs"<(Access to Etherpad)</a></td>
     <td class="tg-0pky">NA</td>
   </tr>
   <tr>
