--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -32,7 +32,7 @@
   </tr>
   <tr>
     <td class="tg-0pky">Data Science For Docs and Clinicians (September 15th)</td>
-    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/">lesson link</a><br> <a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs">(Access to Etherpad)</a></td>
+    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/">lesson link <a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs">(Access to Etherpad)</a></td>
     <td class="tg-0pky">NA</td>
   </tr>
   <tr>
@@ -52,7 +52,7 @@
   </tr>
   <tr>
     <td class="tg-0pky">TBA (December 8th)</td>
-      <td class="tg-0pky">TBA </a></td>
+      <td class="tg-0pky">TBA</td>
     <td class="tg-0pky">TBA</td>
   </tr>
 </tbody>
