--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -4,7 +4,7 @@
   Display syllabus in tabular form.
   Days are displayed if at least one episode has 'start = true'.
 {% endcomment %}
-<div class="syllabus">
+<div class="schedule">
  
 
 <style type="text/css">
