--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -1,59 +1,12 @@
-{% comment %}
-  Display syllabus in tabular form.
-  Days are displayed if at least one episode has 'start = true'.
-{% endcomment %}
-<div class="schedule">
- 
-
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-</style>
-<table class="tg">
-<thead>
-  <tr>
-    <th class="tg-0pky"></th>
-    <th class="tg-0pky">Tasks</th>
-    <th class="tg-0pky">Prerequisites</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-0pky">Pre-workshop</td>
-    <td class="tg-0pky"><span style="font-style:normal"> </span>
-    	<a href="https://uw-madison-datascience.github.io/geospatial-workshop/setup.html">Install software and download data</a><br><span style="font-style:normal"></a></td>
-    <td class="tg-0pky"></td>
-  </tr>
-  <tr>
-    <td class="tg-0pky">Data Science For Docs and Clinicians (September 15th)</td>
-    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/">lesson link <a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs">(Access to Etherpad)</a></td>
-    <td class="tg-0pky">NA</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky">Intro to Docker (September 29-30th)</td>
-    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/docker-introduction/">lesson link <a href="https://pad.carpentries.org/2021-09-29-uwmadison-docker">(Access to Etherpad)</a></td>
-    <td class="tg-0pky">NA</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky">Git/Github (October 27th)</td>
-     <td class="tg-0pky"> <a href = "https://uw-madison-datascience.github.io/git-novice-custom/">lesson link <a href="https://pad.carpentries.org/2020-10-14-uwmadison-git">(Access to Etherpad)</a></td>
-    <td class="tg-0pky">PREREQ: For this workshop, you need to be familiar with all of the commands taught in this <a href="http://swcarpentry.github.io/shell-novice/">unix shell lesson</a></td>
-  </tr>
-  <tr>
-    <td class="tg-0pky">Intro to ML with sklearn (November 10-11th)</td>
-    <td class="tg-0pky"> <a href = "https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">lesson link <a href="https://pad.carpentries.org/2021-11-10-uwmadison-ml">(Access to Etherpad)</a></td>
-    <td class="tg-0pky">NA</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky">TBA (December 8th)</td>
-      <td class="tg-0pky">TBA</td>
-    <td class="tg-0pky">TBA</td>
-  </tr>
-</tbody>
-</table>
-
+<div class="row">
+  <div class="col-md-6">
+    <table class="table table-striped">
+      <tr> <td><b>Sept. 15</b></td>  <td><a href="https://carpentries-incubator.github.io/Data-Science-for-Docs/">Data Science for Clinicians and Docs</a></td> <td><a href="https://pad.carpentries.org/2021-09-15-uwmadison-docs">Etherpad</a></td> </tr>
+      <tr> <td><b>Sept. 29-30</b></td>  <td><a href="https://carpentries-incubator.github.io/docker-introduction/">Intro to Docker</a></td> <td> <a href="https://pad.carpentries.org/2021-09-29-uwmadison-docker">Etherpad</a></td></tr>
+      <tr> <td><b>Oct. 27</b></td>  <td><a href="https://uw-madison-datascience.github.io/git-novice-custom/">Git/GitHub</a> (PREREQ: For this workshop, you need to be familiar with all of the commands taught in this <a href="http://swcarpentry.github.io/shell-novice/">unix shell lesson</a>.)</td> <td> <a href="https://pad.carpentries.org/2020-10-14-uwmadison-git">Etherpad</a></td> </tr>
+      <tr> <td><b>Nov. 10-11</b></td>  <td><a href="https://carpentries-incubator.github.io/machine-learning-novice-sklearn/">Intro to ML with sklearn</a></td> <td> <a href="https://pad.carpentries.org/2021-11-10-uwmadison-ml">Etherpad</a></td> </tr>
+      <tr> <td><b>Dec. 8</b></td>  <td><a href="">TBA</a></td></tr>
+    </table>
+  </div>
 </div>
+
