--- a/_includes/none/setup.html
+++ b/_includes/none/setup.html
@@ -7,12 +7,12 @@
   <tr>
     <td>September 15th</td>
     <td>Data Science for Clinicians and Docs</td>
-    <td>Set Up Instructions here <a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/setup.html"</a></td>
+    <td><a href = "https://carpentries-incubator.github.io/Data-Science-for-Docs/setup.html">Set Up Instructions here</a></td>
   </tr>
   <tr>
     <td>September 29-30th</td>
     <td>Intro to Docker</td>
-    <td>Set Up Instructions here <a href = "https://carpentries-incubator.github.io/docker-introduction/setup.html"</a></td>
+    <td> <a href = "https://carpentries-incubator.github.io/docker-introduction/setup.html">Set Up Instructions here</a></td>
   </tr>
 </table>
 
