--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -14,13 +14,13 @@
   <tr>
     <td>September 29-30th</td>
     <td><a href = "https://carpentries-incubator.github.io/docker-introduction/">Intro to Docker</a></td>
-    <td><a href = "http://swcarpentry.github.io/shell-novice/">For this workshop, you need to be familiar with all of the commands taught in this Unix Shell lesson</td>
+    <td>or this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</td>
     <td><a href = "https://pad.carpentries.org/2021-09-29-uwmadison-docker">Etherpad</a></td>
   </tr>
   <tr>
     <td>October 27th</td>
     <td><a href = "https://uw-madison-datascience.github.io/git-novice-custom/">Git/Github</a></td>
-    <td>For this workshop, you need to be familiar with all of the commands taught in<a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a></td>
+    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a></td>
     <td><a href = "https://pad.carpentries.org/2020-10-14-uwmadison-git">Etherpad</a></td>
   </tr>
   <tr>
