--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -14,7 +14,7 @@
   <tr>
     <td>September 29-30th</td>
     <td><a href = "https://carpentries-incubator.github.io/docker-introduction/">Intro to Docker</a></td>
-    <td>or this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</td>
+    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a></td>
     <td><a href = "https://pad.carpentries.org/2021-09-29-uwmadison-docker">Etherpad</a></td>
   </tr>
   <tr>
