--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -2,7 +2,7 @@
   <tr>
     <th>Date</th>
     <th>Workshop</th>
-    <th>PreReqs</th>
+    <th>PreRequisites</th>
     <th>Etherpad</th>
   </tr>
   <tr>
