--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -33,7 +33,7 @@
     <td>December 8th</td>
     <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python</a></td>
     <td>For this workshop, you need to have a base familiarity with python</td>
-    <td><a href = "https://pad.carpentries.org/2021-12-08-uwmadison-dv"Etherpad</a></td>
+    <td><a href = "https://pad.carpentries.org/2021-12-08-uwmadison-dv">Etherpad</a></td>
   </tr>
 </table>
 
