--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -32,7 +32,7 @@
   <tr>
     <td>December 8th</td>
     <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python</a></td>
-    <td>For this workshop, you need to have a base familiarity with python</td>
+    <td>For this workshop, you need to have a base familiarity with python, the unix shell, and github.</td>
     <td><a href = "https://pad.carpentries.org/2021-12-08-uwmadison-dv">Etherpad</a></td>
   </tr>
 </table>
